--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,15 @@ SET(OCE_ABI_VERSION 0.0.0)
 # Set the minimum version of cmake required to 2.6
 CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )
 
+# Define helper macro OPTION_WITH_DEFAULT
+MACRO( OPTION_WITH_DEFAULT OPTION_NAME OPTION_STRING OPTION_DEFAULT )
+        IF( NOT DEFINED ${OPTION_NAME} )
+                SET( ${OPTION_NAME} ${OPTION_DEFAULT} )
+        ENDIF( NOT DEFINED ${OPTION_NAME} )
+
+        OPTION( ${OPTION_NAME} "${OPTION_STRING}" ${${OPTION_NAME}} )
+ENDMACRO( OPTION_WITH_DEFAULT OPTION_NAME OPTION_STRING OPTION_DEFAULT )
+
 IF( "${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}" LESS 2.5 )
 	MESSAGE( FATAL_ERROR "CMake >= 2.6.0 required" )
 ENDIF( "${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}" LESS 2.5 )
@@ -37,49 +46,15 @@ ENDIF( NOT DEFINED ${PROJECT_NAME}_BUILD_TYPE )
 SET( CMAKE_BUILD_TYPE ${${PROJECT_NAME}_BUILD_TYPE} CACHE INTERNAL "Build type,
 	immutable" FORCE )
 
-IF( NOT DEFINED ${PROJECT_NAME}_BUILD_SHARED_LIB )
-	SET( ${PROJECT_NAME}_BUILD_SHARED_LIB ON )
-ENDIF( NOT DEFINED ${PROJECT_NAME}_BUILD_SHARED_LIB )
-IF( NOT DEFINED ${PROJECT_NAME}_MODEL )
-	SET( ${PROJECT_NAME}_MODEL ON )
-ENDIF( NOT DEFINED ${PROJECT_NAME}_MODEL )
-IF( NOT DEFINED ${PROJECT_NAME}_OCAF )
-	SET( ${PROJECT_NAME}_OCAF ON )
-ENDIF( NOT DEFINED ${PROJECT_NAME}_OCAF )
-IF( NOT DEFINED ${PROJECT_NAME}_DATAEXCHANGE )
-	SET( ${PROJECT_NAME}_DATAEXCHANGE ON )
-ENDIF( NOT DEFINED ${PROJECT_NAME}_DATAEXCHANGE )
-IF( NOT DEFINED ${PROJECT_NAME}_DRAW )
-	SET( ${PROJECT_NAME}_DRAW OFF )
-ENDIF( NOT DEFINED ${PROJECT_NAME}_DRAW )
-IF( NOT DEFINED ${PROJECT_NAME}_VISUALISATION )
-	SET( ${PROJECT_NAME}_VISUALISATION ON )
-ENDIF( NOT DEFINED ${PROJECT_NAME}_VISUALISATION )
-IF( NOT DEFINED ${PROJECT_NAME}_VISUALISATION_FULL )
-	SET( ${PROJECT_NAME}_VISUALISATION_FULL ON )
-ENDIF( NOT DEFINED ${PROJECT_NAME}_VISUALISATION_FULL )
-
-OPTION( ${PROJECT_NAME}_BUILD_SHARED_LIB "Build shared ${PROJECT_NAME} libs"
-	${${PROJECT_NAME}_BUILD_SHARED_LIB} )
-OPTION( ${PROJECT_NAME}_MODEL "Build model components" ${${PROJECT_NAME}_MODEL} )
-OPTION( ${PROJECT_NAME}_OCAF "Build application framework" ${${PROJECT_NAME}_OCAF} )
-OPTION( ${PROJECT_NAME}_DATAEXCHANGE "Build data exchange"
-	${${PROJECT_NAME}_DATAEXCHANGE} )
-OPTION( ${PROJECT_NAME}_DRAW "Build test harness \(DRAW\)" ${${PROJECT_NAME}_DRAW} )
-OPTION( ${PROJECT_NAME}_VISUALISATION "Build visualisation component needed by other modules"
-	${${PROJECT_NAME}_VISUALISATION} )
-OPTION( ${PROJECT_NAME}_VISUALISATION_FULL "Build full visualisation component"
-	${${PROJECT_NAME}_VISUALISATION_FULL} )
-
-IF( NOT DEFINED ${PROJECT_NAME}_WITH_GL2PS )
-	SET( ${PROJECT_NAME}_WITH_GL2PS OFF )
-ENDIF( NOT DEFINED ${PROJECT_NAME}_WITH_GL2PS )
-IF( NOT DEFINED ${PROJECT_NAME}_WITH_FREEIMAGE )
-	SET( ${PROJECT_NAME}_WITH_FREEIMAGE OFF )
-ENDIF( NOT DEFINED ${PROJECT_NAME}_WITH_FREEIMAGE )
-
-OPTION( ${PROJECT_NAME}_WITH_GL2PS "Build with GL2PS" ${${PROJECT_NAME}_WITH_GL2PS} )
-OPTION( ${PROJECT_NAME}_WITH_FREEIMAGE "Build with FreeImage" ${${PROJECT_NAME}_WITH_FREEIMAGE} )
+OPTION_WITH_DEFAULT( ${PROJECT_NAME}_BUILD_SHARED_LIB "Build shared ${PROJECT_NAME} libs" ON )
+OPTION_WITH_DEFAULT( ${PROJECT_NAME}_MODEL "Build model components" ON )
+OPTION_WITH_DEFAULT( ${PROJECT_NAME}_OCAF "Build application framework" ON )
+OPTION_WITH_DEFAULT( ${PROJECT_NAME}_DATAEXCHANGE "Build data exchange" ON )
+OPTION_WITH_DEFAULT( ${PROJECT_NAME}_DRAW "Build test harness \(DRAW\)" OFF )
+OPTION_WITH_DEFAULT( ${PROJECT_NAME}_VISUALISATION "Build visualisation component needed by other modules" ON )
+OPTION_WITH_DEFAULT( ${PROJECT_NAME}_VISUALISATION_FULL "Build full visualisation component" ON )
+OPTION_WITH_DEFAULT( ${PROJECT_NAME}_WITH_GL2PS "Build with GL2PS" OFF )
+OPTION_WITH_DEFAULT( ${PROJECT_NAME}_WITH_FREEIMAGE "Build with FreeImage" OFF )
 
 IF( NOT DEFINED ${PROJECT_NAME}_MULTITHREAD_LIBRARY)
 	SET( ${PROJECT_NAME}_MULTITHREAD_LIBRARY "NONE" CACHE STRING "(values are: NONE TBB OPENMP)" )
