Set component dependencies correctly.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,21 +103,21 @@ SET(${PROJECT_NAME}_FOUNDATION TRUE)
 IF(${PROJECT_NAME}_DRAW AND NOT ${PROJECT_NAME}_DATAEXCHANGE)
 	SET(${PROJECT_NAME}_DATAEXCHANGE ON CACHE BOOL "Build data exchange" FORCE)
 ENDIF(${PROJECT_NAME}_DRAW AND NOT ${PROJECT_NAME}_DATAEXCHANGE)
+IF(${PROJECT_NAME}_DRAW AND NOT ${PROJECT_NAME}_VISUALISATION_FULL)
+	SET(${PROJECT_NAME}_VISUALISATION_FULL ON CACHE BOOL "Build full visualisation component" FORCE)
+ENDIF(${PROJECT_NAME}_DRAW AND NOT ${PROJECT_NAME}_VISUALISATION_FULL)
 IF(${PROJECT_NAME}_DATAEXCHANGE AND NOT ${PROJECT_NAME}_OCAF)
 	SET(${PROJECT_NAME}_OCAF ON CACHE BOOL "Build application framework" FORCE)
 ENDIF(${PROJECT_NAME}_DATAEXCHANGE AND NOT ${PROJECT_NAME}_OCAF)
 IF(${PROJECT_NAME}_OCAF AND NOT ${PROJECT_NAME}_VISUALISATION)
 	SET(${PROJECT_NAME}_VISUALISATION ON CACHE BOOL "Build visualisation component needed by other modules" FORCE)
 ENDIF(${PROJECT_NAME}_OCAF AND NOT ${PROJECT_NAME}_VISUALISATION)
+IF(${PROJECT_NAME}_VISUALISATION_FULL AND NOT ${PROJECT_NAME}_VISUALISATION)
+	SET(${PROJECT_NAME}_VISUALISATION ON CACHE BOOL "Build visualisation component needed by other modules" FORCE)
+ENDIF(${PROJECT_NAME}_VISUALISATION_FULL AND NOT ${PROJECT_NAME}_VISUALISATION)
 IF(${PROJECT_NAME}_VISUALISATION AND NOT ${PROJECT_NAME}_MODEL)
 	SET(${PROJECT_NAME}_MODEL ON CACHE BOOL "Build model components" FORCE)
 ENDIF(${PROJECT_NAME}_VISUALISATION AND NOT ${PROJECT_NAME}_MODEL)
-IF(${PROJECT_NAME}_VISUALISATION_FULL AND NOT ${PROJECT_NAME}_VISUALISATION)
-	SET(${PROJECT_NAME}_VISUALISATION ON CACHE BOOL "Build model components needed by other modules" FORCE)
-ENDIF(${PROJECT_NAME}_VISUALISATION_FULL AND NOT ${PROJECT_NAME}_VISUALISATION)
-IF(${PROJECT_NAME}_DRAW AND NOT ${PROJECT_NAME}_VISUALISATION_FULL)
-	SET(${PROJECT_NAME}_VISUALISATION_FULL ON CACHE BOOL "Build full visualisation component" FORCE)
-ENDIF(${PROJECT_NAME}_DRAW AND NOT ${PROJECT_NAME}_VISUALISATION_FULL)
 
 SET(INSTALL_RESOURCE_FILES)
 FILE(GLOB OS_TCL_SCRIPTS RELATIVE ${${PROJECT_NAME}_SOURCE_DIR} src/OS/*.tcl)
