Setting header path to CMAKE_INSTALL_PREFIX/include.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -518,7 +518,7 @@ IF(NOT DEFINED ${PROJECT_NAME}_INSTALL_PACKAGE_LIB_DIR)
 	SET(${PROJECT_NAME}_INSTALL_PACKAGE_LIB_DIR ${CMAKE_INSTALL_PREFIX}/lib/${PROJECT_NAME})
 ENDIF(NOT DEFINED ${PROJECT_NAME}_INSTALL_PACKAGE_LIB_DIR)
 IF(NOT DEFINED ${PROJECT_NAME}_INSTALL_INCLUDE_DIR)
-	SET(${PROJECT_NAME}_INSTALL_INCLUDE_DIR ${CMAKE_INSTALL_PREFIX}/inc)
+	SET(${PROJECT_NAME}_INSTALL_INCLUDE_DIR ${CMAKE_INSTALL_PREFIX}/include)
 ENDIF(NOT DEFINED ${PROJECT_NAME}_INSTALL_INCLUDE_DIR)
 IF(NOT DEFINED ${PROJECT_NAME}_INSTALL_SCRIPT_DIR)
 	SET(${PROJECT_NAME}_INSTALL_SCRIPT_DIR ${CMAKE_INSTALL_PREFIX})
