Moving install commands to bottom of CMakeLists.txt file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -550,13 +550,6 @@ ELSE(WIN32)
 		${${PROJECT_NAME}_BINARY_DIR}/env.sh
 	)
 ENDIF(WIN32)
-INSTALL(FILES ${ENV_SCRIPTS}
-	DESTINATION ${${PROJECT_NAME}_INSTALL_SCRIPT_DIR})
-
-FILE(GLOB header_files ${${PROJECT_NAME}_SOURCE_DIR}/inc/*.*)
-INSTALL(FILES ${header_files}
-	DESTINATION ${${PROJECT_NAME}_INSTALL_INCLUDE_DIR} COMPONENT Development
-)
 
 SET(OCE_INSTALL_DATA_DIR ${${PROJECT_NAME}_INSTALL_DATA_DIR})
 SET(OCE_DEFAULT_CSF_GraphicShr ${${PROJECT_NAME}_INSTALL_LIB_DIR}/${CMAKE_SHARED_LIBRARY_PREFIX}TKOpenGl${CMAKE_SHARED_LIBRARY_SUFFIX})
@@ -566,8 +559,6 @@ CONFIGURE_FILE( ${CMAKE_CURRENT_SOURCE_DIR}/oce_config.h.cmake
 IF(${PROJECT_NAME}_DRAW)
 	CONFIGURE_FILE( ${CMAKE_CURRENT_SOURCE_DIR}/DrawDefault.cmake
 		${CMAKE_CURRENT_BINARY_DIR}/DrawDefault @ONLY )
-        INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/DrawDefault
-                DESTINATION ${${PROJECT_NAME}_INSTALL_DATA_DIR}/src/DrawResources)
 ENDIF(${PROJECT_NAME}_DRAW)
 
 MACRO(PROCESS_OCC_MODULE modules)
@@ -621,5 +612,20 @@ ENDIF(${PROJECT_NAME}_DRAW)
 # DRAWEXE application
 IF(${PROJECT_NAME}_DRAW)
 	PROCESS_OCC_MODULE( DRAWEXE )
+ENDIF(${PROJECT_NAME}_DRAW)
+
+###########
+# Install #
+###########
+INSTALL(FILES ${ENV_SCRIPTS}
+	DESTINATION ${${PROJECT_NAME}_INSTALL_SCRIPT_DIR})
+
+FILE(GLOB header_files ${${PROJECT_NAME}_SOURCE_DIR}/inc/*.*)
+INSTALL(FILES ${header_files}
+	DESTINATION ${${PROJECT_NAME}_INSTALL_INCLUDE_DIR} COMPONENT Development)
+
+IF(${PROJECT_NAME}_DRAW)
+        INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/DrawDefault
+                DESTINATION ${${PROJECT_NAME}_INSTALL_DATA_DIR}/src/DrawResources)
 ENDIF(${PROJECT_NAME}_DRAW)
 
