--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -488,7 +488,7 @@ IF( ${PROJECT_NAME}_EXTRA_WARNINGS)
     ADD_DEFINITIONS("/W4 /wd4100")
   ENDIF(MSVC)
   IF(CMAKE_COMPILER_IS_GNUCXX)
-    ADD_DEFINITIONS("-Wall")
+	  ADD_DEFINITIONS("-Wall -Wextra")
   ENDIF(CMAKE_COMPILER_IS_GNUCXX)
   IF(BORLAND)
     #TODO
