Adding oce-config.h to install header list.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -589,8 +589,9 @@ ENDIF(WIN32)
 
 SET(OCE_INSTALL_DATA_DIR ${${PROJECT_NAME}_INSTALL_DATA_DIR})
 SET(OCE_DEFAULT_CSF_GraphicShr ${${PROJECT_NAME}_INSTALL_LIB_DIR}/${CMAKE_SHARED_LIBRARY_PREFIX}TKOpenGl${CMAKE_SHARED_LIBRARY_SUFFIX})
+SET(CONFIGURED_${PROJECT_NAME}_HEADER ${CMAKE_CURRENT_BINARY_DIR}/inc/oce-config.h )
 CONFIGURE_FILE( ${CMAKE_CURRENT_SOURCE_DIR}/oce_config.h.cmake
-	${CMAKE_CURRENT_BINARY_DIR}/inc/oce-config.h )
+	${CONFIGURED_${PROJECT_NAME}_HEADER} )
 
 IF(${PROJECT_NAME}_DRAW)
 	CONFIGURE_FILE( ${CMAKE_CURRENT_SOURCE_DIR}/DrawDefault.cmake
@@ -606,9 +607,8 @@ MACRO(PROCESS_OCC_MODULE modulename modules)
 		ADD_SUBDIRECTORY( adm/cmake/${module} )
 		
 		IF (USE_SOLUTION_FOLDERS)
-      SET_TARGET_PROPERTIES(${module} PROPERTIES FOLDER ${modulename} )
-    ENDIF(USE_SOLUTION_FOLDERS)
-    
+			SET_TARGET_PROPERTIES(${module} PROPERTIES FOLDER ${modulename} )
+		ENDIF(USE_SOLUTION_FOLDERS)
 	ENDFOREACH(module ${modules})
 ENDMACRO(PROCESS_OCC_MODULE modulename modules)
 ####################################################################################
@@ -662,7 +662,7 @@ INSTALL(FILES ${ENV_SCRIPTS}
 	DESTINATION ${${PROJECT_NAME}_INSTALL_SCRIPT_DIR})
 
 FILE(GLOB header_files ${${PROJECT_NAME}_SOURCE_DIR}/inc/*.*)
-INSTALL(FILES ${header_files}
+INSTALL(FILES ${header_files} ${CONFIGURED_${PROJECT_NAME}_HEADER}
 	DESTINATION ${${PROJECT_NAME}_INSTALL_INCLUDE_DIR} COMPONENT Development)
 
 IF(${PROJECT_NAME}_DRAW)
