Adding headers to groups.  Also using a single list for the headers to help with the speed of the search.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -615,6 +615,7 @@ ENDMACRO(PROCESS_OCC_MODULE modulename modules)
 # Process modules of each ToolKit                                                  #
 ####################################################################################
 SET(PROCESSED_TOOLKITS)
+SET(INSTALL_PUBLIC_HEADER_FILES)
 FILE(GLOB ALL_PUBLIC_HEADER_FILES ${${PROJECT_NAME}_SOURCE_DIR}/inc/*.*)
 
 # Foundation
@@ -683,8 +684,8 @@ ENDIF(${PROJECT_NAME}_DRAW)
 INSTALL(FILES ${ENV_SCRIPTS}
 	DESTINATION ${${PROJECT_NAME}_INSTALL_SCRIPT_DIR})
 
-FILE(GLOB header_files ${${PROJECT_NAME}_SOURCE_DIR}/inc/*.*)
-INSTALL(FILES ${header_files} ${CONFIGURED_${PROJECT_NAME}_HEADER}
+#FILE(GLOB header_files ${${PROJECT_NAME}_SOURCE_DIR}/inc/*.*)
+INSTALL(FILES ${INSTALL_PUBLIC_HEADER_FILES} ${CONFIGURED_${PROJECT_NAME}_HEADER}
 	DESTINATION ${${PROJECT_NAME}_INSTALL_INCLUDE_DIR} COMPONENT Development)
 
 IF(${PROJECT_NAME}_DRAW)
