--- a/samples/mfc/03_Viewer2d/CMakeLists.txt
+++ b/samples/mfc/03_Viewer2d/CMakeLists.txt
@@ -1,8 +1,17 @@
 PROJECT(Viewer2d)
 
+SET(CMAKE_MFC_FLAG 2) 
 FILE(GLOB SRCS src/*.cpp)
+FILE(GLOB PROP_SRCS src/Properties/*.cpp)
 FILE(GLOB HEADERS src/*.h)
 FILE(GLOB RES res/*.rc)
 SET(PCH src/StdAfx.h src/StdAfx.cpp)
 
-ADD_EXECUTABLE(Viewer2d WIN32 ${SRCS} ${HEADERS} ${PCH} ${RES}) 
+INCLUDE_DIRECTORIES(res)
+INCLUDE_DIRECTORIES(src)
+INCLUDE_DIRECTORIES(src/Properties)
+INCLUDE_DIRECTORIES(../Common/)
+
+ADD_EXECUTABLE(Viewer2d WIN32 ${SRCS} ${PROP_SRCS} ${HEADERS} ${PCH} ${RES}) 
+TARGET_LINK_LIBRARIES(Viewer2d mfcsample)
+SETUP_EXAMPLE(Viewer2d)
