--- a/samples/mfc/04_Viewer3d/CMakeLists.txt
+++ b/samples/mfc/04_Viewer3d/CMakeLists.txt
@@ -1,8 +1,16 @@
 PROJECT(Viewer3d)
+SET(CMAKE_MFC_FLAG 2) 
+FILE(GLOB SRCS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} src/*.cpp)
+LIST(REMOVE_ITEM SRCS src/DlgAttributes.cpp)
 
-FILE(GLOB SRCS src/*.cpp)
 FILE(GLOB HEADERS src/*.h)
 FILE(GLOB RES res/*.rc)
 SET(PCH src/StdAfx.h src/StdAfx.cpp)
 
+INCLUDE_DIRECTORIES(src)
+INCLUDE_DIRECTORIES(Res)
+INCLUDE_DIRECTORIES(../Common/)
+
 ADD_EXECUTABLE(Viewer3d WIN32 ${SRCS} ${HEADERS} ${PCH} ${RES}) 
+TARGET_LINK_LIBRARIES(Viewer3d mfcsample)
+SETUP_EXAMPLE(Viewer3d)
