--- a/samples/mfc/06_Ocaf/CMakeLists.txt
+++ b/samples/mfc/06_Ocaf/CMakeLists.txt
@@ -1,8 +1,15 @@
-PROJECT(OCAF)
-
-FILE(GLOB SRCS src/*.cpp)
+PROJECT(OCAFSample)
+SET(CMAKE_MFC_FLAG 2) 
+FILE(GLOB SRCS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} src/*.c*)
+LIST(REMOVE_ITEM SRCS src/OCAFSample_CommonDriver.cxx)
 FILE(GLOB HEADERS src/*.h)
 FILE(GLOB RES res/*.rc)
 SET(PCH src/StdAfx.h src/StdAfx.cpp)
 
-ADD_EXECUTABLE(OCAF WIN32 ${SRCS} ${HEADERS} ${PCH} ${RES}) 
+INCLUDE_DIRECTORIES(.)
+INCLUDE_DIRECTORIES(src)
+INCLUDE_DIRECTORIES(../Common/)
+
+ADD_EXECUTABLE(OCAFSample WIN32 ${SRCS} ${HEADERS} ${PCH} ${RES}) 
+TARGET_LINK_LIBRARIES(OCAFSample mfcsample)
+SETUP_EXAMPLE(OCAFSample)
