--- a/samples/mfc/10_Convert/CMakeLists.txt
+++ b/samples/mfc/10_Convert/CMakeLists.txt
@@ -1,8 +1,18 @@
 PROJECT(Convert)
+SET(CMAKE_MFC_FLAG 2) 
 
-FILE(GLOB SRCS src/*.cpp)
+FILE(GLOB SRCS src/*.c*)
+FILE(GLOB SRCS_WNT src/Wnt/*.c*)
+FILE(GLOB SRCS_PRES src/ISession/*.c*)
 FILE(GLOB HEADERS src/*.h)
 FILE(GLOB RES res/*.rc)
-SET(PCH src/StdAfx.h src/StdAfx.cpp)
 
-ADD_EXECUTABLE(Convert WIN32 ${SRCS} ${HEADERS} ${PCH} ${RES}) 
+INCLUDE_DIRECTORIES(.)
+INCLUDE_DIRECTORIES(src)
+INCLUDE_DIRECTORIES(src/WNT)
+INCLUDE_DIRECTORIES(src/ISession)
+INCLUDE_DIRECTORIES(../Common/)
+
+ADD_EXECUTABLE(Convert WIN32 ${SRCS} ${SRCS_WNT} ${SRCS_PRES} ${HEADERS} ${RES}) 
+TARGET_LINK_LIBRARIES(Convert mfcsample)
+SETUP_EXAMPLE(Convert)
