Modified files Added .m and .mm in OccBuildKit.cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -173,23 +173,22 @@ ENDIF(${PROJECT_NAME}_VISUALISATION AND ${PROJECT_NAME}_WITH_FREEIMAGE)
 #
 # X11 is needed on Unix to compile OSD/OSD_FontMgr.cxx
 #
-IF (NOT WIN32)
-	FIND_PACKAGE(X11 REQUIRED)
-ENDIF (NOT WIN32)
+#IF (NOT WIN32)
+#	FIND_PACKAGE(X11 REQUIRED)
+#ENDIF (NOT WIN32)
 
 IF(${PROJECT_NAME}_VISUALISATION_FULL)
-	IF (NOT WIN32)
+	IF (NOT WIN32 AND NOT APPLE)
 		FIND_LIBRARY( X11_Xmu_LIB Xmu PATHS /usr/openwin/lib )
-	ENDIF(NOT WIN32)
+	ENDIF(NOT WIN32 AND NOT APPLE)
 
-	IF (NOT APPLE)
-	  FIND_PACKAGE(OpenGL REQUIRED)
-	ELSE (NOT APPLE)
-	  # under OSX, builtin FindOpenGl.cmake returns Cocoa OpenGL implementation
-	  # oce requires the X11 based OpenGL
-	  SET(OPENGL_INCLUDE_DIR /usr/X11R6/include/)
-	  SET(OPENGL_LIBRARIES /usr/X11R6/lib/libGL.dylib /usr/X11R6/lib/libGLU.dylib)
-	ENDIF (NOT APPLE)
+	IF(APPLE AND OCE_USE_X)
+		FIND_PATH(OPENGL_INCLUDE_DIR GL/gl.h /usr/X11R6/include)
+		FIND_PATH(OPENGL_xmesa_INCLUDE_DIR GL/xmesa.h /usr/X11R6/include)
+		FIND_LIBRARY(OPENGL_gl_LIBRARY NAMES GL MesaGL PATHS /usr/lib /usr/local/lib /usr/X11R6/lib)
+		FIND_LIBRARY(OPENGL_glu_LIBRARY NAMES GLU MesaGLU PATHS ${OPENGL_gl_LIBRARY} /usr/lib /usr/local/lib /usr/X11R6/lib)
+	ENDIF(APPLE AND OCE_USE_X)
+	FIND_PACKAGE(OpenGL)
 
 	## FreeType / FTGL
 	IF(NOT ${PROJECT_NAME}_USE_BUNDLE)
