--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,8 +60,8 @@ OPTION_WITH_DEFAULT( ${PROJECT_NAME}_MODEL "Build model components" ON )
 OPTION_WITH_DEFAULT( ${PROJECT_NAME}_OCAF "Build application framework" ON )
 OPTION_WITH_DEFAULT( ${PROJECT_NAME}_DATAEXCHANGE "Build data exchange" ON )
 OPTION_WITH_DEFAULT( ${PROJECT_NAME}_DRAW "Build test harness \(DRAW\)" OFF )
-OPTION_WITH_DEFAULT( ${PROJECT_NAME}_VISUALISATION "Build visualisation component needed by other modules" ON )
-OPTION_WITH_DEFAULT( ${PROJECT_NAME}_VISUALISATION_FULL "Build full visualisation component" ON )
+OPTION_WITH_DEFAULT( ${PROJECT_NAME}_VISUALISATION "Build visualisation component" ON )
+OPTION_WITH_DEFAULT( ${PROJECT_NAME}_USE_X "Use X11" ON )
 OPTION_WITH_DEFAULT( ${PROJECT_NAME}_WITH_GL2PS "Build with GL2PS" OFF )
 OPTION_WITH_DEFAULT( ${PROJECT_NAME}_WITH_FREEIMAGE "Build with FreeImage" OFF )
 OPTION_WITH_DEFAULT( ${PROJECT_NAME}_EXTRA_WARNINGS "Enable Maximum Warnings Level" OFF )
@@ -119,21 +119,27 @@ SET(${PROJECT_NAME}_FOUNDATION TRUE)
 IF(${PROJECT_NAME}_DRAW AND NOT ${PROJECT_NAME}_DATAEXCHANGE)
 	SET(${PROJECT_NAME}_DATAEXCHANGE ON CACHE BOOL "Build data exchange" FORCE)
 ENDIF(${PROJECT_NAME}_DRAW AND NOT ${PROJECT_NAME}_DATAEXCHANGE)
+
 IF(${PROJECT_NAME}_DATAEXCHANGE AND NOT ${PROJECT_NAME}_OCAF)
 	SET(${PROJECT_NAME}_OCAF ON CACHE BOOL "Build application framework" FORCE)
 ENDIF(${PROJECT_NAME}_DATAEXCHANGE AND NOT ${PROJECT_NAME}_OCAF)
+
 IF(${PROJECT_NAME}_OCAF AND NOT ${PROJECT_NAME}_VISUALISATION)
 	SET(${PROJECT_NAME}_VISUALISATION ON CACHE BOOL "Build visualisation component needed by other modules" FORCE)
 ENDIF(${PROJECT_NAME}_OCAF AND NOT ${PROJECT_NAME}_VISUALISATION)
+
 IF(${PROJECT_NAME}_VISUALISATION AND NOT ${PROJECT_NAME}_MODEL)
 	SET(${PROJECT_NAME}_MODEL ON CACHE BOOL "Build model components" FORCE)
 ENDIF(${PROJECT_NAME}_VISUALISATION AND NOT ${PROJECT_NAME}_MODEL)
-IF(${PROJECT_NAME}_VISUALISATION_FULL AND NOT ${PROJECT_NAME}_VISUALISATION)
-	SET(${PROJECT_NAME}_VISUALISATION ON CACHE BOOL "Build model components needed by other modules" FORCE)
-ENDIF(${PROJECT_NAME}_VISUALISATION_FULL AND NOT ${PROJECT_NAME}_VISUALISATION)
-IF(${PROJECT_NAME}_DRAW AND NOT ${PROJECT_NAME}_VISUALISATION_FULL)
-	SET(${PROJECT_NAME}_VISUALISATION_FULL ON CACHE BOOL "Build full visualisation component" FORCE)
-ENDIF(${PROJECT_NAME}_DRAW AND NOT ${PROJECT_NAME}_VISUALISATION_FULL)
+
+IF(${PROJECT_NAME}_DRAW AND NOT ${PROJECT_NAME}_VISUALISATION)
+	SET(${PROJECT_NAME}_VISUALISATION ON CACHE BOOL "Build visualisation component" FORCE)
+ENDIF(${PROJECT_NAME}_DRAW AND NOT ${PROJECT_NAME}_VISUALISATION)
+
+IF(NOT ${PROJECT_NAME}_USE_X)
+	SET(${PROJECT_NAME}_VISUALISATION OFF CACHE BOOL "Build visualisation component" FORCE)
+	SET(${PROJECT_NAME}_DRAW OFF CACHE BOOL "Build test harness \(DRAW\)" FORCE)
+ENDIF(NOT ${PROJECT_NAME}_USE_X)
 
 SET(INSTALL_RESOURCE_FILES)
 FILE(GLOB OS_TCL_SCRIPTS RELATIVE ${${PROJECT_NAME}_SOURCE_DIR} src/OS/*.tcl)
@@ -170,14 +176,7 @@ IF(${PROJECT_NAME}_VISUALISATION AND ${PROJECT_NAME}_WITH_FREEIMAGE)
 	MARK_AS_ADVANCED(FREEIMAGE_INCLUDE_DIR FREEIMAGE_LIBRARY)
 ENDIF(${PROJECT_NAME}_VISUALISATION AND ${PROJECT_NAME}_WITH_FREEIMAGE)
 
-#
-# X11 is needed on Unix to compile OSD/OSD_FontMgr.cxx
-#
-IF (NOT WIN32)
-	FIND_PACKAGE(X11 REQUIRED)
-ENDIF (NOT WIN32)
-
-IF(${PROJECT_NAME}_VISUALISATION_FULL)
+IF(${PROJECT_NAME}_VISUALISATION)
 	IF (NOT WIN32)
 		FIND_LIBRARY( X11_Xmu_LIB Xmu PATHS /usr/openwin/lib )
 	ENDIF(NOT WIN32)
@@ -231,7 +230,7 @@ IF(${PROJECT_NAME}_VISUALISATION_FULL)
 	FILE(GLOB TEXTURES_RGB_FILES RELATIVE ${${PROJECT_NAME}_SOURCE_DIR} src/Textures/*.rgb)
 	FILE(GLOB FONTMFT_MFT_FILES RELATIVE ${${PROJECT_NAME}_SOURCE_DIR} src/FontMFT/*.mft)
 	SET(INSTALL_RESOURCE_FILES ${INSTALL_RESOURCE_FILES} ${FONTMFT_MFT_FILES} ${TEXTURES_RGB_FILES})
-ENDIF(${PROJECT_NAME}_VISUALISATION_FULL)
+ENDIF(${PROJECT_NAME}_VISUALISATION)
 
 IF(${PROJECT_NAME}_OCAF)
 	FILE(GLOB XMLOCAFRESOURCE_XSD_FILES RELATIVE ${${PROJECT_NAME}_SOURCE_DIR} src/XmlOcafResource/*.xsd)
@@ -296,7 +295,7 @@ ENDIF(${PROJECT_NAME}_DRAW)
  
 IF (${PROJECT_NAME}_USE_BUNDLE AND OCE_BUNDLE_ROOT_PATH)
 	MESSAGE("Using OCE Bundle")
-	IF (${PROJECT_NAME}_VISUALISATION_FULL)
+	IF (${PROJECT_NAME}_VISUALISATION)
 		SET(FTGL_INCLUDE_DIR ${OCE_BUNDLE_ROOT_PATH}/include/FTGL CACHE PATH "" FORCE)
 		SET(FREETYPE_INCLUDE_DIR_freetype2 ${OCE_BUNDLE_ROOT_PATH}/include/freetype CACHE PATH "" FORCE)
 		SET(FREETYPE_INCLUDE_DIR_ft2build ${OCE_BUNDLE_ROOT_PATH}/include/freetype CACHE PATH "" FORCE)
@@ -307,7 +306,7 @@ IF (${PROJECT_NAME}_USE_BUNDLE AND OCE_BUNDLE_ROOT_PATH)
 		SET(FTGL_LIBRARY ${OCE_BUNDLE_ROOT_PATH}/lib/ftgl.lib CACHE FILEPATH "" FORCE)
 		SET(FTGL_LIBRARY_DEBUG ${OCE_BUNDLE_ROOT_PATH}/libd/ftgld.lib CACHE FILEPATH "" FORCE)
 		ADD_DEFINITIONS(-DHAVE_FTGL_NEWER212)
-	ENDIF (${PROJECT_NAME}_VISUALISATION_FULL)
+	ENDIF (${PROJECT_NAME}_VISUALISATION)
 
 	IF(${PROJECT_NAME}_VISUALISATION AND ${PROJECT_NAME}_WITH_GL2PS)
 		SET(GL2PS_LIBRARY ${OCE_BUNDLE_ROOT_PATH}/lib/gl2ps.lib CACHE FILEPATH "" FORCE)
@@ -728,44 +727,41 @@ ENDMACRO(PROCESS_OCC_MODULE modulename modules)
 ####################################################################################
 # Foundation
 PROCESS_OCC_MODULE( "Kernel" "TKernel;TKMath;TKAdvTools" )
+IF(${PROJECT_NAME}_USE_X)
+	PROCESS_OCC_MODULE( "Kernel" "TKService" )
+ENDIF (${PROJECT_NAME}_USE_X)
 
-# Modeling Data
-IF (${PROJECT_NAME}_MODEL)
+# Modeling Data & Modeling Algorithms
+IF(${PROJECT_NAME}_MODEL)
 	PROCESS_OCC_MODULE( "Modeling Data" "TKG2d;TKG3d;TKGeomBase;TKBRep" )
-ENDIF (${PROJECT_NAME}_MODEL)
-
-# Modeling Algorithms
-IF (${PROJECT_NAME}_MODEL)
 	PROCESS_OCC_MODULE( "Modeling Algorithms" "TKGeomAlgo;TKTopAlgo;TKPrim;TKBO;TKHLR;TKMesh;TKShHealing;TKXMesh;TKBool;TKFillet;TKFeat;TKOffset" )
 ENDIF (${PROJECT_NAME}_MODEL)
 
 # Visualisation
-IF(${PROJECT_NAME}_VISUALISATION)
-	PROCESS_OCC_MODULE( "Visualization" "TKService;TKV2d;TKV3d" )
-ENDIF(${PROJECT_NAME}_VISUALISATION)
-IF(${PROJECT_NAME}_VISUALISATION_FULL)
-	PROCESS_OCC_MODULE( "Visualization" "TKOpenGl;TKMeshVS;TKNIS;TKVoxel" )
-ENDIF(${PROJECT_NAME}_VISUALISATION_FULL)
+IF(${PROJECT_NAME}_VISUALISATION AND ${PROJECT_NAME}_USE_X)
+	PROCESS_OCC_MODULE( "Visualization" "TKV2d;TKV3d;TKOpenGl;TKMeshVS;TKNIS;TKVoxel" )
+ENDIF(${PROJECT_NAME}_VISUALISATION AND ${PROJECT_NAME}_USE_X)
 
 # Application framework
 IF(${PROJECT_NAME}_OCAF)
-	PROCESS_OCC_MODULE( "OCAF" "TKCDF;PTKernel;TKLCAF;FWOSPlugin;TKPShape;TKCAF;TKBinL;TKXmlL;TKPLCAF;TKTObj;TKShapeSchema;TKBin;TKXml;TKPCAF;TKBinTObj;TKXmlTObj;TKStdLSchema;TKStdSchema" )
+	PROCESS_OCC_MODULE( "OCAF" "TKCDF;PTKernel;TKLCAF;FWOSPlugin;TKPShape;TKBinL;TKXmlL;TKPLCAF;TKTObj;TKShapeSchema;TKStdLSchema")
+	IF (${PROJECT_NAME}_USE_X)
+		PROCESS_OCC_MODULE( "OCAF" "TKCAF;TKBin;TKXml;TKPCAF;TKBinTObj;TKXmlTObj;TKStdSchema")
+	ENDIF (${PROJECT_NAME}_USE_X)
 ENDIF(${PROJECT_NAME}_OCAF)
 
 # Data exchange
 IF(${PROJECT_NAME}_DATAEXCHANGE)
-	PROCESS_OCC_MODULE( "Data Exchange" "TKVRML;TKXCAF;TKSTL;TKXSBase;TKXCAFSchema;TKXmlXCAF;TKBinXCAF;TKSTEPBase;TKIGES;TKSTEPAttr;TKSTEP209;TKXDEIGES;TKSTEP;TKXDESTEP" )
+	PROCESS_OCC_MODULE( "Data Exchange" "TKSTL;TKXSBase;TKSTEPBase;TKIGES;TKSTEPAttr;TKSTEP209;TKSTEP" )
+	IF(${PROJECT_NAME}_USE_X)
+		PROCESS_OCC_MODULE( "Data Exchange" "TKVRML;TKXCAF;TKXCAFSchema;TKXmlXCAF;TKBinXCAF;TKXDEIGES;TKXDESTEP" )
+	ENDIF(${PROJECT_NAME}_USE_X)
 ENDIF(${PROJECT_NAME}_DATAEXCHANGE)
 
 # Draw
-IF(${PROJECT_NAME}_DRAW)
-	PROCESS_OCC_MODULE( "Draw" "TKDraw;TKTopTest;TKViewerTest;TKXSDRAW;TKDCAF;TKXDEDRAW;TKTObjDRAW" )
-ENDIF(${PROJECT_NAME}_DRAW)
-
-# DRAWEXE application
-IF(${PROJECT_NAME}_DRAW)
-	PROCESS_OCC_MODULE( "Draw" DRAWEXE )
-ENDIF(${PROJECT_NAME}_DRAW)
+IF(${PROJECT_NAME}_DRAW AND ${PROJECT_NAME}_USE_X)
+	PROCESS_OCC_MODULE( "Draw" "TKDraw;TKTopTest;TKViewerTest;TKXSDRAW;TKDCAF;TKXDEDRAW;TKTObjDRAW;DRAWEXE" )
+ENDIF(${PROJECT_NAME}_DRAW AND ${PROJECT_NAME}_USE_X)
 
 CONFIGURE_FILE( ${CMAKE_CURRENT_SOURCE_DIR}/ProjectConfig.cmake.in 
 	${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake)
