OCAF without visualization (x11)
preliminary

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -787,9 +787,9 @@ CONFIGURE_FILE (${CMAKE_CURRENT_SOURCE_DIR}/Version.rc.cmake
 
 MACRO(PROCESS_MODULE modulename modules_std)
 	set(modules ${modules_std})
-	IF(NOT ${PROJECT_NAME}_DISABLE_X11)
+	IF(NOT ${PROJECT_NAME}_DISABLE_X11 AND ${PROJECT_NAME}_VISUALISATION)
 		LIST(APPEND modules ${ARGN})
-	ENDIF(NOT ${PROJECT_NAME}_DISABLE_X11)
+	ENDIF(NOT ${PROJECT_NAME}_DISABLE_X11 AND ${PROJECT_NAME}_VISUALISATION)
 	FOREACH(module ${modules})
 		LIST(APPEND ${PROJECT_NAME}_LIBRARIES ${module})
 		SET(TOOLKIT_MODULES "")
@@ -822,7 +822,7 @@ ENDIF (${PROJECT_NAME}_MODEL)
 
 # Visualisation
 IF(${PROJECT_NAME}_VISU_DEP)
-	PROCESS_MODULE( "Visualization" "" "TKService;TKV2d;TKV3d" )
+	PROCESS_MODULE( "Visualization" "TKService" "TKV2d;TKV3d" )
 ENDIF(${PROJECT_NAME}_VISU_DEP)
 IF(${PROJECT_NAME}_VISUALISATION)
 	PROCESS_MODULE( "Visualization" "" "TKOpenGl;TKMeshVS;TKNIS;TKVoxel" )
@@ -830,12 +830,12 @@ ENDIF(${PROJECT_NAME}_VISUALISATION)
 
 # Application framework
 IF(${PROJECT_NAME}_OCAF)
-	PROCESS_MODULE( "OCAF" "TKCDF;PTKernel;TKLCAF;FWOSPlugin;TKPShape;TKBinL;TKXmlL;TKPLCAF;TKTObj;TKShapeSchema;TKStdLSchema" "TKCAF;TKBin;TKXml;TKPCAF;TKBinTObj;TKXmlTObj;TKStdSchema" )
+	PROCESS_MODULE( "OCAF" "TKCDF;PTKernel;TKLCAF;FWOSPlugin;TKPShape;TKBinL;TKXmlL;TKPLCAF;TKTObj;TKShapeSchema;TKStdLSchema;TKCAF;TKBin;TKXml;TKPCAF;TKBinTObj;TKXmlTObj;TKStdSchema" "" )
 ENDIF(${PROJECT_NAME}_OCAF)
 
 # Data exchange
 IF(${PROJECT_NAME}_DATAEXCHANGE)
-	PROCESS_MODULE( "Data Exchange" "TKSTL;TKXSBase;TKSTEPBase;TKIGES;TKSTEPAttr;TKSTEP209;TKSTEP" "TKVRML;TKXCAF;TKXCAFSchema;TKXmlXCAF;TKBinXCAF;TKXDEIGES;TKXDESTEP" )
+	PROCESS_MODULE( "Data Exchange" "TKSTL;TKXSBase;TKSTEPBase;TKIGES;TKSTEPAttr;TKSTEP209;TKSTEP;TKXCAF;TKXCAFSchema;TKXmlXCAF;TKBinXCAF;TKXDEIGES;TKXDESTEP" "TKVRML;" )
 ENDIF(${PROJECT_NAME}_DATAEXCHANGE)
 
 # Draw
