--- a/adm/cmake/TKService/CMakeLists.txt
+++ b/adm/cmake/TKService/CMakeLists.txt
@@ -1,29 +1,37 @@
 SET(TOOLKIT TKService)
 
 SET(TOOLKIT_MODULES
-	AlienImage
 	Aspect
-	CGM
+	
 	Image
 	MFT
-	PS
+	
 	PlotMgt
 	SelectBasics
 	TColQuantity
 	Viewer
 )
+IF(OCE_VISUALISATION)
 IF (WIN32)
 	SET(TOOLKIT_MODULES ${TOOLKIT_MODULES}
+		AlienImage
 		InterfaceGraphic
 		WNT
+		CGM
+		PS
 	)
 ELSE(WIN32)
 	SET(TOOLKIT_MODULES ${TOOLKIT_MODULES}
+		AlienImage
 		ImageUtility
 		Xw
+		CGM
+		PS
 	)
 	SET(TOOLKIT_LIBS ${X11_Xmu_LIB} ${X11_LIBRARIES})
 ENDIF(WIN32)
+ENDIF(OCE_VISUALISATION)
+
 SET(TOOLKIT_DEPENDS TKMath TKernel)
 
 IF(FREEIMAGE_LIBRARY AND ${PROJECT_NAME}_WITH_FREEIMAGE)
