All dependencies must now be explicitly set
Tests could not be compiled, there are linking errors, for instance with BRepAlgoAPI_test:
  /usr/bin/ld: CMakeFiles/boolean_ops_test.dir/boolean_ops.cpp.o: undefined reference to symbol 'TopLoc_SListOfItemLocation::Clear()'
  /usr/bin/ld: note: 'TopLoc_SListOfItemLocation::Clear()' is defined in DSO .../oce/build/adm/cmake/TKMath/Unix/x86_64-Release-64/libTKMath.so.2 so try adding it to the linker command line

--- a/test/BRepImport_test/CMakeLists.txt
+++ b/test/BRepImport_test/CMakeLists.txt
@@ -7,5 +7,5 @@ IF (${PROJECT_NAME}_DATAEXCHANGE)
     CONFIGURE_FILE( ${CMAKE_CURRENT_SOURCE_DIR}/BRepImport_test_config.h.cmake ${CMAKE_BINARY_DIR}/test_inc/BRepImport_test_config.h )
     INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/test_inc)
 
-    ADD_OCE_TEST(BRepImport_test "TKernel;TKSTEP")
+    ADD_OCE_TEST(BRepImport_test "TKSTEP;TKBRep;TKMath;TKernel")
 ENDIF (${PROJECT_NAME}_DATAEXCHANGE)
