--- a/test/IGESImport_test/CMakeLists.txt
+++ b/test/IGESImport_test/CMakeLists.txt
@@ -4,5 +4,5 @@ IF (${PROJECT_NAME}_DATAEXCHANGE)
     CONFIGURE_FILE( ${CMAKE_CURRENT_SOURCE_DIR}/IGESImport_test_config.h.cmake ${CMAKE_BINARY_DIR}/test_inc/IGESImport_test_config.h )
     INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/test_inc)
 
-    ADD_OCE_TEST(IGESImport_test "TKernel;TKIGES")
+    ADD_OCE_TEST(IGESImport_test "TKIGES;TKXSBase;TKBRep;TKMath;TKernel")
 ENDIF (${PROJECT_NAME}_DATAEXCHANGE)
