--- a/test/BRepAlgoAPI_test/CMakeLists.txt
+++ b/test/BRepAlgoAPI_test/CMakeLists.txt
@@ -1,3 +1,3 @@
 IF (${PROJECT_NAME}_MODEL)
-    ADD_OCE_TEST(boolean_ops_test "TKPrim;TKBO")
+    ADD_OCE_TEST(boolean_ops_test "TKPrim;TKBO;TKTopAlgo;TKBRep;TKMath;TKernel")
 ENDIF (${PROJECT_NAME}_MODEL)
