--- a/test/BRepPrimAPI_test/CMakeLists.txt
+++ b/test/BRepPrimAPI_test/CMakeLists.txt
@@ -1,3 +1,3 @@
 IF (${PROJECT_NAME}_MODEL)
-    ADD_OCE_TEST(BRepPrimAPI_test "TKPrim")
+    ADD_OCE_TEST(BRepPrimAPI_test "TKPrim;TKTopAlgo;TKBRep;TKMath;TKernel")
 ENDIF (${PROJECT_NAME}_MODEL)
