--- a/test/STEPImport_test/CMakeLists.txt
+++ b/test/STEPImport_test/CMakeLists.txt
@@ -8,5 +8,5 @@ IF (${PROJECT_NAME}_DATAEXCHANGE)
     CONFIGURE_FILE( ${CMAKE_CURRENT_SOURCE_DIR}/STEPImport_test_config.h.cmake ${CMAKE_BINARY_DIR}/test_inc/STEPImport_test_config.h )
     INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/test_inc)
 
-    ADD_OCE_TEST(STEPImport_test "TKernel;TKSTEP")
+    ADD_OCE_TEST(STEPImport_test "TKSTEP;TKXSBase;TKBRep;TKMath;TKernel")
 ENDIF (${PROJECT_NAME}_DATAEXCHANGE)
