--- a/test/Standard_StdAllocator_test/CMakeLists.txt
+++ b/test/Standard_StdAllocator_test/CMakeLists.txt
@@ -1,3 +1,3 @@
 IF (${PROJECT_NAME}_MODEL)
-    ADD_OCE_TEST(Standard_StdAllocator_test "TKernel;TKPrim")
+    ADD_OCE_TEST(Standard_StdAllocator_test "TKPrim;TKTopAlgo;TKBRep;TKMath;TKernel")
 ENDIF (${PROJECT_NAME}_MODEL)
