--- a/test/TDataXtd_test/CMakeLists.txt
+++ b/test/TDataXtd_test/CMakeLists.txt
@@ -1,3 +1,3 @@
 IF (${PROJECT_NAME}_OCAF)
-    ADD_OCE_TEST(TDataXtd_test "TKCAF;TKXCAF")
+    ADD_OCE_TEST(TDataXtd_test "TKCAF;TKXCAF;TKLCAF;TKernel")
 ENDIF (${PROJECT_NAME}_OCAF)
