Fix per the superbuild test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -317,7 +317,7 @@ ENDIF(${PROJECT_NAME}_USE_BUNDLE OR ${PROJECT_NAME}_USE_BUNDLE_SOURCE)
 IF(${PROJECT_NAME}_VISU_DEP)
 	## TKService requires FreeType
 	IF(NOT ${PROJECT_NAME}_USE_BUNDLE AND NOT ${PROJECT_NAME}_USE_BUNDLE_SOURCE)
-		FIND_PACKAGE(Freetype REQUIRED)
+		FIND_LIBRARY(Freetype REQUIRED)
 	ELSE (NOT ${PROJECT_NAME}_USE_BUNDLE AND NOT ${PROJECT_NAME}_USE_BUNDLE_SOURCE)
 		FIND_LIBRARY(FREETYPE_LIBRARY freetype)
 	ENDIF(NOT ${PROJECT_NAME}_USE_BUNDLE AND NOT ${PROJECT_NAME}_USE_BUNDLE_SOURCE)
