--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,19 +72,9 @@ IF(MSVC)
 	OPTION_WITH_DEFAULT( ${PROJECT_NAME}_INSTALL_PDB_FILES "Install PDB files (debug informations)" ON )
 ENDIF(MSVC)
 
-IF(MSVC)
-	OPTION_WITH_DEFAULT( ${PROJECT_NAME}_USE_BUNDLE "Use OCE Windows Bundle that has been built and installed" OFF )
-	OPTION_WITH_DEFAULT( ${PROJECT_NAME}_USE_BUNDLE_SOURCE "Use OCE Windows Bundle source and incorporate into current project" OFF )
-ENDIF(MSVC)
-
 IF(BORLAND)
 	OPTION_WITH_DEFAULT( ${PROJECT_NAME}_INSTALL_TDS_FILES "Instal TDS files (debug informations)" ON )
 ENDIF(BORLAND)
-
-IF(${PROJECT_NAME}_USE_BUNDLE OR ${PROJECT_NAME}_USE_BUNDLE_SOURCE)
-	OPTION_WITH_DEFAULT( ${PROJECT_NAME}_BUNDLE_AUTOINSTALL "Autoinstall bundle DLLs" ON )
-	MARK_AS_ADVANCED(${PROJECT_NAME}_BUNDLE_AUTOINSTALL)
-ENDIF(${PROJECT_NAME}_USE_BUNDLE OR ${PROJECT_NAME}_USE_BUNDLE_SOURCE)
 
 IF ((MSVC AND NOT NMAKE) OR CMAKE_COMPILER_IS_GNUCXX)
 	SET(${PROJECT_NAME}_COMPILER_SUPPORTS_PCH TRUE)
@@ -310,18 +300,9 @@ IF(${PROJECT_NAME}_MULTITHREAD_LIBRARY STREQUAL "OPENMP")
 	FIND_PACKAGE(OpenMP)
 ENDIF(${PROJECT_NAME}_MULTITHREAD_LIBRARY STREQUAL "OPENMP")
 
-IF (${PROJECT_NAME}_USE_BUNDLE OR ${PROJECT_NAME}_USE_BUNDLE_SOURCE)
-	FIND_PATH(${PROJECT_NAME}_BUNDLE_ROOT_PATH oce-bundle-root.empty "Path for the OCE-win-bundle")
-ENDIF(${PROJECT_NAME}_USE_BUNDLE OR ${PROJECT_NAME}_USE_BUNDLE_SOURCE)
-
 IF(${PROJECT_NAME}_VISU_DEP)
-	## TKService requires FreeType
-	IF(NOT ${PROJECT_NAME}_USE_BUNDLE AND NOT ${PROJECT_NAME}_USE_BUNDLE_SOURCE)
-		FIND_PACKAGE(Freetype REQUIRED)
-	ELSE (NOT ${PROJECT_NAME}_USE_BUNDLE AND NOT ${PROJECT_NAME}_USE_BUNDLE_SOURCE)
-		FIND_LIBRARY(FREETYPE_LIBRARY freetype)
-	ENDIF(NOT ${PROJECT_NAME}_USE_BUNDLE AND NOT ${PROJECT_NAME}_USE_BUNDLE_SOURCE)
-
+	FIND_LIBRARY(FREETYPE_LIBRARY freetype "Location of freetype library")
+	
 	IF(CMAKE_CONFIGURATION_TYPES OR NMAKE)
 		FIND_LIBRARY(FREETYPE_LIBRARY_DEBUG freetyped "Location of freetype debug library")
 	ENDIF(CMAKE_CONFIGURATION_TYPES OR NMAKE)
@@ -444,32 +425,6 @@ IF(${PROJECT_NAME}_DRAW)
 		src/DrawResources/mkdoc
 		src/DrawResources/tdoc )
 ENDIF(${PROJECT_NAME}_DRAW)
-
-IF (${PROJECT_NAME}_USE_BUNDLE AND ${PROJECT_NAME}_BUNDLE_ROOT_PATH)
-	MESSAGE("Using previously built and installed OCE Bundle")
-	IF (${PROJECT_NAME}_VISUALISATION)
-		SET(FREETYPE_INCLUDE_DIR_freetype2 ${${PROJECT_NAME}_BUNDLE_ROOT_PATH}/include/freetype CACHE PATH "" FORCE)
-		SET(FREETYPE_INCLUDE_DIR_ft2build ${${PROJECT_NAME}_BUNDLE_ROOT_PATH}/include/freetype CACHE PATH "" FORCE)
-		SET(FREETYPE_INCLUDE_DIRS ${FREETYPE_INCLUDE_DIR_freetype2} ${FREETYPE_INCLUDE_DIR_ft2build})
-		SET(FREETYPE_LIBRARY ${${PROJECT_NAME}_BUNDLE_ROOT_PATH}/Win${BIT}/lib/freetype.lib CACHE FILEPATH "" FORCE)
-		SET(FREETYPE_LIBRARIES ${${PROJECT_NAME}_BUNDLE_ROOT_PATH}/Win${BIT}/lib/freetype.lib CACHE FILEPATH "" FORCE)
-		SET(FREETYPE_LIBRARY_DEBUG ${${PROJECT_NAME}_BUNDLE_ROOT_PATH}/Win${BIT}/lib/freetyped.lib CACHE FILEPATH "" FORCE)
-		
-		IF(${PROJECT_NAME}_WITH_GL2PS)
-			SET(GL2PS_LIBRARY ${${PROJECT_NAME}_BUNDLE_ROOT_PATH}/Win${BIT}/lib/gl2ps.lib CACHE FILEPATH "" FORCE)
-			SET(GL2PS_LIBRARY_DEBUG ${${PROJECT_NAME}_BUNDLE_ROOT_PATH}/Win${BIT}/lib/gl2psd.lib CACHE FILEPATH "" FORCE)
-			SET(GL2PS_INCLUDE_DIR ${${PROJECT_NAME}_BUNDLE_ROOT_PATH}/include/gl2ps CACHE PATH "" FORCE)
-		ENDIF(${PROJECT_NAME}_WITH_GL2PS)
-
-		IF(${PROJECT_NAME}_WITH_FREEIMAGE)
-			SET(FREEIMAGE_LIBRARY ${${PROJECT_NAME}_BUNDLE_ROOT_PATH}/Win${BIT}/lib/FreeImage.lib CACHE FILEPATH "" FORCE)
-			SET(FREEIMAGE_LIBRARY_DEBUG ${${PROJECT_NAME}_BUNDLE_ROOT_PATH}/Win${BIT}/lib/FreeImaged.lib CACHE FILEPATH "" FORCE)
-			SET(FREEIMAGEPLUS_LIBRARY ${${PROJECT_NAME}_BUNDLE_ROOT_PATH}/Win${BIT}/lib/FreeImagePlus.lib CACHE FILEPATH "" FORCE)
-			SET(FREEIMAGEPLUS_LIBRARY_DEBUG ${${PROJECT_NAME}_BUNDLE_ROOT_PATH}/Win${BIT}/lib/FreeImagePlusd.lib CACHE FILEPATH "" FORCE)
-			SET(FREEIMAGE_INCLUDE_DIR ${${PROJECT_NAME}_BUNDLE_ROOT_PATH}/include/FreeImage CACHE PATH "" FORCE)
-		ENDIF(${PROJECT_NAME}_WITH_FREEIMAGE)
-	ENDIF (${PROJECT_NAME}_VISUALISATION)
-ENDIF(${PROJECT_NAME}_USE_BUNDLE AND ${PROJECT_NAME}_BUNDLE_ROOT_PATH)
 
 IF(MSVC)
 	SET( CMAKE_DEBUG_POSTFIX "d" )
@@ -811,50 +766,6 @@ ELSE(WIN32)
 ENDIF(WIN32)
 STRING(TOLOWER ${PROJECT_NAME} PROJECT_NAME_LOWERCASE)
 
-# If OCE_USE_BUNDLE_SOURCE, then we need to add oce-win-bundle and set it
-# to build into the same destination directories as OCE. This cannot run
-# until LIBRARY_OUTPUT_PATH is set above
-IF (${PROJECT_NAME}_USE_BUNDLE_SOURCE AND ${PROJECT_NAME}_BUNDLE_ROOT_PATH)
-	# Embed oce-win-bundle project into this CMake project
-	MESSAGE("Using OCE Bundle in same CMake project")
-	ADD_SUBDIRECTORY( ${${PROJECT_NAME}_BUNDLE_ROOT_PATH} ${CMAKE_BINARY_DIR}/oce-win-bundle )
-
-  # The installation directory of the bundle must match the one of OCE
-  SET(OCE_WIN_BUNDLE_INSTALL_DIR ${${PROJECT_NAME}_INSTALL_PREFIX} CACHE PATH "" FORCE)
-  
-	# Look for includes in bundle source directory.
-	# Put oce-win-bundle libraries and dlls in same place OCE libraries and dlls are going,
-	# and set variables to point OCE to them.
-	IF (${PROJECT_NAME}_VISUALISATION)
-		SET(FREETYPE_INCLUDE_DIR_freetype2 ${${PROJECT_NAME}_BUNDLE_ROOT_PATH}/libs/freetype CACHE PATH "" FORCE)
-		SET(FREETYPE_INCLUDE_DIR_ft2build ${${PROJECT_NAME}_BUNDLE_ROOT_PATH}/libs/freetype/include CACHE PATH "" FORCE)
-		SET(FREETYPE_INCLUDE_DIRS ${FREETYPE_INCLUDE_DIR_freetype2} ${FREETYPE_INCLUDE_DIR_ft2build})
-		GET_TARGET_PROPERTY( FREETYPE_ARCHIVE_OUTPUT_DIRECTORY freetype ARCHIVE_OUTPUT_DIRECTORY )
-		SET(FREETYPE_LIBRARY ${FREETYPE_ARCHIVE_OUTPUT_DIRECTORY}/${CMAKE_CFG_INTDIR}/freetype.lib CACHE FILEPATH "" FORCE)
-		SET(FREETYPE_LIBRARIES ${FREETYPE_ARCHIVE_OUTPUT_DIRECTORY}/${CMAKE_CFG_INTDIR}/freetype.lib CACHE FILEPATH "" FORCE)
-		SET(FREETYPE_LIBRARY_DEBUG ${FREETYPE_ARCHIVE_OUTPUT_DIRECTORY}/${CMAKE_CFG_INTDIR}/freetyped.lib CACHE FILEPATH "" FORCE)
-
-		IF(${PROJECT_NAME}_WITH_GL2PS)
-			GET_TARGET_PROPERTY( GL2PS_ARCHIVE_OUTPUT_DIRECTORY gl2ps ARCHIVE_OUTPUT_DIRECTORY )
-			SET(GL2PS_LIBRARY ${GL2PS_ARCHIVE_OUTPUT_DIRECTORY}/${CMAKE_CFG_INTDIR}/gl2ps.lib CACHE FILEPATH "" FORCE)
-			SET(GL2PS_LIBRARY_DEBUG ${GL2PS_ARCHIVE_OUTPUT_DIRECTORY}/${CMAKE_CFG_INTDIR}/gl2psd.lib CACHE FILEPATH "" FORCE)
-			SET(GL2PS_INCLUDE_DIR ${${PROJECT_NAME}_BUNDLE_ROOT_PATH}/libs/gl2ps CACHE PATH "" FORCE)
-		ENDIF(${PROJECT_NAME}_WITH_GL2PS)
-
-		IF(${PROJECT_NAME}_WITH_FREEIMAGE)
-			GET_TARGET_PROPERTY( FREEIMAGE_ARCHIVE_OUTPUT_DIRECTORY FreeImage ARCHIVE_OUTPUT_DIRECTORY )
-			SET(FREEIMAGE_LIBRARY ${FREEIMAGE_ARCHIVE_OUTPUT_DIRECTORY}/${CMAKE_CFG_INTDIR}/FreeImage.lib CACHE FILEPATH "" FORCE)
-			SET(FREEIMAGE_LIBRARY_DEBUG ${FREEIMAGE_ARCHIVE_OUTPUT_DIRECTORY}/${CMAKE_CFG_INTDIR}/FreeImaged.lib CACHE FILEPATH "" FORCE)
-
-			GET_TARGET_PROPERTY( FREEIMAGEPLUS_ARCHIVE_OUTPUT_DIRECTORY FreeImage ARCHIVE_OUTPUT_DIRECTORY )
-			SET(FREEIMAGEPLUS_LIBRARY ${FREEIMAGEPLUS_ARCHIVE_OUTPUT_DIRECTORY}/${CMAKE_CFG_INTDIR}/FreeImagePlus.lib CACHE FILEPATH "" FORCE)
-			SET(FREEIMAGEPLUS_LIBRARY_DEBUG ${FREEIMAGEPLUS_ARCHIVE_OUTPUT_DIRECTORY}/${CMAKE_CFG_INTDIR}/FreeImagePlusd.lib CACHE FILEPATH "" FORCE)
-
-			SET(FREEIMAGE_INCLUDE_DIR ${${PROJECT_NAME}_BUNDLE_ROOT_PATH}/libs/FreeImage/Source ${${PROJECT_NAME}_BUNDLE_ROOT_PATH}/libs/FreeImage/Wrapper/FreeImagePlus CACHE PATH "" FORCE)
-		ENDIF(${PROJECT_NAME}_WITH_FREEIMAGE)
-	ENDIF (${PROJECT_NAME}_VISUALISATION)
-ENDIF(${PROJECT_NAME}_USE_BUNDLE_SOURCE AND ${PROJECT_NAME}_BUNDLE_ROOT_PATH)
-
 # Binaries
 IF(NOT DEFINED ${PROJECT_NAME}_INSTALL_BIN_DIR)
 	SET(${PROJECT_NAME}_INSTALL_BIN_DIR ${_PSUFFIX}bin)
@@ -1072,12 +983,6 @@ INSTALL(FILES ${PROJECT_BINARY_DIR}/${PROJECT_NAME}Config.cmake ${PROJECT_BINARY
 
 INSTALL(EXPORT ${PROJECT_NAME}-libraries DESTINATION ${${PROJECT_NAME}_INSTALL_CMAKE_DATA_DIR} COMPONENT Development)
 
-IF(${PROJECT_NAME}_USE_BUNDLE_SOURCE AND ${PROJECT_NAME}_BUNDLE_ROOT_PATH)
-	# Add dependencies between OCE and oce-win-bundle
-	add_dependencies( TKService FreeImage )
-	add_dependencies( TKOpenGl freetype gl2ps )
-ENDIF(${PROJECT_NAME}_USE_BUNDLE_SOURCE AND ${PROJECT_NAME}_BUNDLE_ROOT_PATH)
-
 ############
 # PostBuild Step
 ############
@@ -1104,9 +1009,7 @@ IF(MSVC AND ${PROJECT_NAME}_TESTING)
 				    ADD_CUSTOM_COMMAND(TARGET PostBuild POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${TCL_BIN_DIR}/${TCL_LIB_NAME_DIR}.dll ${LIBRARY_OUTPUT_PATH}/${config}/ VERBATIM)
 				ENDIF()
 
-				# With USE_BUNDLE_SOURCE, the dll's referenced below are already in the
-				# correct locations.
-				IF(NOT ${PROJECT_NAME}_USE_BUNDLE_SOURCE)
+				# Copy the dll's referenced in the correct locations.
 					SET(TMP_SRCDIR ${OCE_BUNDLE_ROOT_PATH}/Win${BIT}/bin/)
 					SET(TMP_DESTDIR ${LIBRARY_OUTPUT_PATH}/${config})
 					STRING(REGEX REPLACE "/" "\\\\" TMP_SRCDIR ${TMP_SRCDIR})
@@ -1122,7 +1025,6 @@ IF(MSVC AND ${PROJECT_NAME}_TESTING)
 					FOREACH (TMP_FILE ${TMP_FILELIST} )
 							 ADD_CUSTOM_COMMAND(TARGET PostBuild POST_BUILD COMMAND xcopy /Y ${TMP_SRCDIR}${TMP_FILE}${TMP_SUFFIX}.dll ${TMP_DESTDIR} VERBATIM )
 					ENDFOREACH()
-				ENDIF()
 
 				# Switch between bin and bind dirs
 				IF (${config} MATCHES "Debug")
@@ -1156,8 +1058,7 @@ IF(MSVC AND ${PROJECT_NAME}_TESTING)
 				ENDIF()
 
 				IF (${CMAKE_BUILD_TYPE} MATCHES "Debug")
-					ADD_CUSTOM_COMMAND(TARGET PostBuild POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${OCE_BUNDLE_ROOT_PATH}/Win${BIT}/bin/ ${LIBRARY_OUTPUT_PATH} VERBATIM )
-
+					
 					# Install TBB libraries
 					IF(${PROJECT_NAME}_MULTITHREAD_LIBRARY STREQUAL "TBB" AND TBB_BIN_DIR)
 						ADD_CUSTOM_COMMAND(TARGET PostBuild POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy "${TBB_BIN_DIR}/tbb_debug.dll" ${LIBRARY_OUTPUT_PATH}/${config}/ VERBATIM)
@@ -1167,8 +1068,7 @@ IF(MSVC AND ${PROJECT_NAME}_TESTING)
 						ADD_CUSTOM_COMMAND(TARGET PostBuild POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy "${TBB_BIN_DIR}/tbbmalloc_debug.dll" ${LIBRARY_OUTPUT_PATH}/${config}/ VERBATIM)
 					ENDIF(${PROJECT_NAME}_TBB_MALLOC_SUPPORT AND TBB_BIN_DIR)
 				ELSE ()
-					ADD_CUSTOM_COMMAND(TARGET PostBuild POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${OCE_BUNDLE_ROOT_PATH}/Win${BIT}/bin/ ${LIBRARY_OUTPUT_PATH}/ VERBATIM )
-
+					
 					# Install TBB libraries
 					IF(${PROJECT_NAME}_MULTITHREAD_LIBRARY STREQUAL "TBB" AND TBB_BIN_DIR)
 						ADD_CUSTOM_COMMAND(TARGET PostBuild POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy "${TBB_BIN_DIR}/tbb.dll" ${LIBRARY_OUTPUT_PATH}/${config}/ VERBATIM)
