Allow using precompiled headers with NMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -137,7 +137,7 @@ if(OCE_USE_BUNDLE OR OCE_USE_BUNDLE_SOURCE)
 	mark_as_advanced(OCE_BUNDLE_AUTOINSTALL)
 endif(OCE_USE_BUNDLE OR OCE_USE_BUNDLE_SOURCE)
 
-if ((MSVC AND NOT NMAKE) OR CMAKE_COMPILER_IS_GNUCXX)
+if (MSVC OR CMAKE_COMPILER_IS_GNUCXX)
 	set(OCE_COMPILER_SUPPORTS_PCH TRUE)
 	if(MSVC)
 		option_with_default( OCE_USE_PCH "Use Precompiled Headers" ON )
@@ -145,7 +145,7 @@ if ((MSVC AND NOT NMAKE) OR CMAKE_COMPILER_IS_GNUCXX)
 		option_with_default( OCE_USE_PCH "Use Precompiled Headers" OFF )
 	endif()
 	mark_as_advanced(OCE_USE_PCH)
-endif((MSVC AND NOT NMAKE) OR CMAKE_COMPILER_IS_GNUCXX)
+endif(MSVC OR CMAKE_COMPILER_IS_GNUCXX)
 
 option_with_default( OCE_BUILD_SHARED_LIB "Build shared OCE libs" ON )
 if(APPLE)
